# rusty-file-uploader

./: .env  .gitignore  Cargo.toml  run.sh  set_db.sh
.sqlx/: query-15af548cb7d3f8d91d3f9908f6078a1c5e86548e2a4e39f7c33dff8de739a1b8.json  query-1ea4a3f1d8f72d6aa47e63a6b10518dd2961b8f6e72189105959ad8cd065702f.json  query-42bc0bfd06aa178c2295ac783aa64d9f10cd2fc09daeb3a547a25b24379b67a7.json  query-771f2a72d0a796e25f90e1837fc601593a7071e8d790fcda5dcf004caa95fb45.json
rfu-frontend/: astro.config.mjs  bun.lockb  package.json  tailwind.config.mjs  tsconfig.json
rfu-frontend/src/components/: CreateStoreForm.svelte  FileInputComponent.svelte  InputComponent.svelte  LoginForm.svelte  RegisterForm.svelte  UpdateStoreForm.svelte  UploadForm.svelte
rfu-frontend/src/lib/: constants.ts
rfu-frontend/src/pages/: index.astro  login.astro  logout.astro  register.astro  session.ts  store.astro
rfu-frontend/src/pages/store/: new.astro
rfu-frontend/src/pages/store/[id]/: edit.astro  files.astro  upload.astro
rfu-frontend/src/utils/: cookies.ts
src/: .env  main.rs
src/messages/: mod.rs
src/middleware/: mod.rs
src/migrations/: 20241015210239_create-tables.sql
src/routes/: mod.rs
src/script/: script.sr
