[package]
name = "rusty-file-upload"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
femme = "2.2.1"
color-eyre = "0.6.3"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
argon2 = "0.5.3"
serde_json = "1.0.128"
anyhow = "1.0.89"
axum = { version = "0.7.7", features = ["multipart", "macros"]}
tokio = { version = "1.40.0", features = ["full"] }
jsonwebtoken = "9.3.0"
