[package]
name = "rusty-file-upload"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
color-eyre = "0.6.3"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "macros", "time"] }
argon2 = "0.5.3"
serde_json = "1.0.128"
anyhow = "1.0.89"
axum = { version = "0.7.7", features = ["multipart", "macros"]}
tokio = { version = "1.40.0", features = ["full"] }
jsonwebtoken = "9.3.0"
tower-http = { version = "0.6.1", features = ["trace", "cors"]}
tower = { version = "0.5.1", features = ["tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono = "0.4.38"
uuid = { version = "1.11.0", features = ["v4", "serde"]}
dotenvy = { version = "0.15.7" }
infer = "0.16.0"
time = {version = "*", features = ["serde"]}
serde_with = "3.11.0"
chksum-hash-md5 = "0.0.1"
